# CareerConnect

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  app_old.py  config.py  docker-compose.yml  gunicorn.conf.py  login_test_user.py  post_test.py  pyproject.toml  register_page_test.py  register_user_test.py  requirements.txt  search_test.py
.github/workflows/: ci.yml  pylint.yml
app/: __init__.py  config_validator.py  errors.py  extensions.py  forms.py  logging_config.py  metrics.py  models.py  permissions.py  utils.py
app/routes/: auth.py  chat.py  comments.py  health.py  main.py  metrics.py  posts.py  questions.py  search.py  users.py
app/templates/: add_question.html  all_chats.html  all_comments.html  all_likes.html  base.html  change_role.html  chat.html  comment.html  create_post.html  delete_account.html  delete_comment.html  delete_post.html  edit_comment.html  feed.html  (+9 more)
docs/: architecture.md
instance/: careerconnect.db  flaskblog.db
monitoring/: prometheus.yml
requirements/: base.txt  dev.txt
static/: style.css
templates/: add_question.html  all_chats.html  all_comments.html  all_likes.html  base.html  chat.html  comment.html  create_post.html  feed.html  login.html  navbar.html  profile.html  questions.html  register.html  search.html  update_account.html  update_post.html  welcome.html
tests/: __init__.py  conftest.py  test_auth.py  test_chat.py  test_comments.py  test_errors.py  test_models.py  test_permissions.py  test_posts.py  test_questions.py  test_search.py  test_users.py
(+5 files in other folders)
